--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^1.1.3",
-    "discord.js": "^14.6.0"
+    "discord.js": "^14.6.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
